Fix issue with text-fade being too high

--- a/app/styles/ember-arcgis-portal-components.scss
+++ b/app/styles/ember-arcgis-portal-components.scss
@@ -229,7 +229,7 @@ div.panel-body:has(.item-picker) {
       }
       .item-picker-current-item-preview-description {
         overflow: hidden;
-        flex: 0 1 auto;
+        flex: 1 1 auto;
         position: relative;
         margin-top: 5%;
         .text-fade {
